--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "core-hooks": "^2.0.0",
+    "hex-to-rgba": "^2.0.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^9.1.2",
