--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "core-hooks": "^2.0.0",
+    "dropbox": "^10.34.0",
     "hex-to-rgba": "^2.0.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-dropbox-chooser": "^0.0.5",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
